<resources>
    <string name="app_name">Trivia</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_text">Question 45/89</string>
    <string name="TrueButton">True</string>
    <string name="FalseButton">False</string>
    <string name="NextButton">Next</string>
    <string name="correct_answer" >correct</string>
    <string name="incorrect" >Incorrect</string>
    <string name="placeholder">Konnnichiwa Minna. Dozou yooroshikun</string>
    <string name="text_formatted">Question: %d/%d</string>
</resources>